--- a/caddy.conf
+++ b/caddy.conf
@@ -1,7 +1,7 @@
-mydomain.me
+${DOMAIN}
 {
-  proxy /ray localhost:10000 {
-    websocket
-    header_upstream -Origin
-  }
+    proxy /ray localhost:10000 {
+        websocket
+        header_upstream -Origin
+    }
 }
