--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
             "protocol": "vmess",
             "settings": {
                 "clients": [
-                    {  "id": "b831381d-6324-4d53-ad4f-8cda48b30811"  }
+                    ${LIST_OF_UUID}
                 ],
                 "default": {
                     "level": 0,
