--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
             "protocol": "vmess",
             "settings": {
                 "clients": [
-                    ${UUID_LIST}
+                    $UUID_LIST
                 ],
                 "default": {
                     "level": 0,
