--- a/caddy.conf
+++ b/caddy.conf
@@ -1,6 +1,6 @@
 $DOMAIN
 {
-    proxy /ray localhost:10000 {
+    proxy $PATH localhost:10000 {
         websocket
         header_upstream -Origin
     }
