--- a/caddy.conf
+++ b/caddy.conf
@@ -1,6 +1,6 @@
 https://$DOMAIN
 {
-    ttl $MAIL
+    tls $MAIL
     proxy /ray localhost:10000 {
         websocket
         header_upstream -Origin
