--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
             "streamSettings": {
                 "network": "ws",
                 "wsSettings": {
-                    "path": "/ray"
+                    "path": "/ws"
                 }
             }
         }
