--- a/caddy.conf
+++ b/caddy.conf
@@ -1,7 +1,7 @@
 https://$DOMAIN
 {
     tls $MAIL
-    proxy /ray localhost:10000 {
+    proxy /ws localhost:10000 {
         websocket
         header_upstream -Origin
     }
