--- a/caddy.conf
+++ b/caddy.conf
@@ -1,9 +1,17 @@
-https://$DOMAIN
+https://{$DOMAIN}/down/ {
+    root /www
+    browse /down/
+}
+
+https://{$DOMAIN}/{$RAY_PATH}
 {
-    tls $MAIL
-    proxy /ws localhost:10000 {
+    proxy /{$RAY_PATH} localhost:10000 {
         websocket
         header_upstream -Origin
     }
-    proxy / $REDIRECT_URL
+}
+
+https://{$DOMAIN}
+{
+    proxy / {$REDIRECT_URL}
 }
