--- a/caddy.conf
+++ b/caddy.conf
@@ -1,6 +1,9 @@
 https://{$DOMAIN}/down/ {
     root /www
     browse /down/
+    markdown /down/ {
+        ext .md .txt
+    }  
 }
 
 https://{$DOMAIN}/{$RAY_PATH}
