--- a/caddy.conf
+++ b/caddy.conf
@@ -1,20 +1,9 @@
-https://{$DOMAIN}/down/ {
-    root /www
-    browse /down/
-    markdown /down/ {
-        ext .md .txt
-    }  
-}
-
-https://{$DOMAIN}/{$RAY_PATH}
+https://{$DOMAIN}
 {
     proxy /{$RAY_PATH} localhost:10000 {
         websocket
         header_upstream -Origin
     }
-}
-
-https://{$DOMAIN}
-{
+    proxy /{$APP_PATH}/ https://pch18-docker.github.io/v2ray/
     proxy / {$REDIRECT_URL}
 }
