--- a/caddy.conf
+++ b/caddy.conf
@@ -4,6 +4,6 @@ https://{$DOMAIN}
         websocket
         header_upstream -Origin
     }
-    proxy /{$APP_PATH}/ https://pch18-docker.github.io/v2ray/
+    proxy /{$DOC_PATH}/ https://pch18-docker.github.io/v2ray/
     proxy / {$REDIRECT_URL}
 }
