--- a/caddy.conf
+++ b/caddy.conf
@@ -1,9 +1,13 @@
+https://{$DOMAIN}/{$DOC_PATH}
+{
+    proxy / {$DOC_URL}
+}
+
 https://{$DOMAIN}
 {
     proxy /{$RAY_PATH} localhost:10000 {
         websocket
         header_upstream -Origin
     }
-    proxy /{$DOC_PATH} https://pch18-docker.github.io/v2ray
     proxy / {$REDIRECT_URL}
 }
