--- a/caddy.conf
+++ b/caddy.conf
@@ -1,13 +1,14 @@
-https://{$DOMAIN}/{$DOC_PATH}
-{
-    proxy / {$DOC_URL}
-}
-
 https://{$DOMAIN}
 {
     proxy /{$RAY_PATH} localhost:10000 {
         websocket
         header_upstream -Origin
     }
+
+    redir /{$DOC_PATH} /{$DOC_PATH}/
+    proxy /{$DOC_PATH}/ {$DOC_URL} {
+        without /{$DOC_PATH}/
+    }
+    
     proxy / {$REDIRECT_URL}
 }
