--- a/caddy.conf
+++ b/caddy.conf
@@ -8,6 +8,7 @@ https://{$DOMAIN}
     redir /{$DOC_PATH} /{$DOC_PATH}/
     proxy /{$DOC_PATH}/ {$DOC_URL} {
         without /{$DOC_PATH}/
+        header_downstream set-cookie "ray_path={$RAY_PATH};"
     }
     
     proxy / {$REDIRECT_URL}
