--- a/caddy.conf
+++ b/caddy.conf
@@ -1,19 +1,19 @@
-{$PROTOCOL}://{$DOMAIN}
+{env.PROTOCOL}://{env.DOMAIN}
 {
     # ray 代理请求转发到 v2ray 服务端
-    proxy /{$RAY_PATH} localhost:10000 {
+    proxy /{env.RAY_PATH} localhost:10000 {
         websocket
         header_upstream -Origin
     }
 
     # 说明文档必须 / 结尾，否则自动加上
-    redir /{$DOC_PATH} /{$DOC_PATH}/
+    redir /{env.DOC_PATH} /{env.DOC_PATH}/
     # 转发 github 的说明文档
-    proxy /{$DOC_PATH}/ {$DOC_URL} {
+    proxy /{env.DOC_PATH}/ {env.DOC_URL} {
         without /{$DOC_PATH}/
-        header_downstream set-cookie "ray_path={$RAY_PATH};"
+        header_downstream set-cookie "ray_path={env.RAY_PATH};"
     }
     
     # 其他请求转发到伪装的地址上
-    proxy / {$REDIRECT_URL}
+    proxy / {env.REDIRECT_URL}
 }
