--- a/caddy.conf
+++ b/caddy.conf
@@ -1,19 +1,16 @@
-{env.PROTOCOL}://{env.DOMAIN}
+{$PROTOCOL}://{$DOMAIN}
 {
-    # ray 代理请求转发到 v2ray 服务端
-    proxy /{env.RAY_PATH} localhost:10000 {
-        websocket
-        header_upstream -Origin
+    # 转发v2ray后台
+    reverse_proxy {$PATH_RAY} localhost:10000
+
+    # github文档站转发
+    handle_path {$PATH_DOC} {
+        rewrite * /v2ray{path}
+        reverse_proxy https://pch18-docker.github.io {
+            header_up Host {http.reverse_proxy.upstream.hostport}
+            header_down +set-cookie "ray_path={$PATH_RAY};"
+        }
     }
 
-    # 说明文档必须 / 结尾，否则自动加上
-    redir /{env.DOC_PATH} /{env.DOC_PATH}/
-    # 转发 github 的说明文档
-    proxy /{env.DOC_PATH}/ {env.DOC_URL} {
-        without /{$DOC_PATH}/
-        header_downstream set-cookie "ray_path={env.RAY_PATH};"
-    }
-    
-    # 其他请求转发到伪装的地址上
-    proxy / {env.REDIRECT_URL}
+    reverse_proxy {$URL_DISGUISE}
 }
