--- a/caddy.conf
+++ b/caddy.conf
@@ -12,5 +12,7 @@
         }
     }
 
-    reverse_proxy {$URL_DISGUISE}
+    reverse_proxy {$URL_DISGUISE} {
+        header_up Host {http.reverse_proxy.upstream.hostport}
+    }
 }
