--- a/caddy.conf
+++ b/caddy.conf
@@ -8,7 +8,7 @@
         rewrite * /v2ray{path}
         reverse_proxy https://pch18-docker.github.io {
             header_up Host {http.reverse_proxy.upstream.hostport}
-            header_down +set-cookie "ray_path={$PATH_RAY};"
+            header_down +set-cookie "path_ray={$PATH_RAY};"
         }
     }
 
