--- a/caddy.conf
+++ b/caddy.conf
@@ -4,9 +4,9 @@
     reverse_proxy {$PATH_RAY} localhost:10000
 
     # github文档站转发
-    handle_path {$PATH_DOC}/ {
-        rewrite * /v2ray{path}
-        rewrite /v2ray /v2ray/
+    redir {$PATH_DOC} {$PATH_DOC}/
+    handle_path {$PATH_DOC}/* {
+        rewrite * /v2ray/{path}
         reverse_proxy https://pch18-docker.github.io {
             header_up Host {http.reverse_proxy.upstream.hostport}
             header_down +set-cookie "path_ray={$PATH_RAY};"
