--- a/caddy.conf
+++ b/caddy.conf
@@ -5,11 +5,33 @@
 
     # github文档站转发
     redir {$PATH_DOC} {$PATH_DOC}/
-    handle_path {$PATH_DOC}/* {
-        rewrite * /v2ray/{path}
-        reverse_proxy https://pch18-docker.github.io {
+    handle_path {$PATH_DOC}/ {
+        rewrite * /pch18-docker/v2ray/master/docs/index.md
+        reverse_proxy https://raw.githubusercontent.com/ {
             header_up Host {http.reverse_proxy.upstream.hostport}
             header_down +set-cookie "path_ray={$PATH_RAY};"
+        }
+    }
+    
+    # win-app下载地址
+    handle_path {$PATH_DOC}/win.zip {
+        rewrite * /2dust/v2rayN/releases/download/4.12/v2rayN-Core.zip
+        reverse_proxy https://github.com {
+            header_up Host {http.reverse_proxy.upstream.hostport}
+        }
+    }
+    # mac-app下载地址
+    handle_path {$PATH_DOC}/mac.zip {
+        rewrite * /yichengchen/clashX/releases/download/1.40.0/ClashX.dmg
+        reverse_proxy https://github.com {
+            header_up Host {http.reverse_proxy.upstream.hostport}
+        }
+    }
+    # android-app下载地址
+    handle_path {$PATH_DOC}/android.apk {
+        rewrite * /rurirei/Kitsunebi/releases/download/xtls.v1.3.2/app-release-unsigned-signed.apk
+        reverse_proxy https://github.com {
+            header_up Host {http.reverse_proxy.upstream.hostport}
         }
     }
 
