--- a/caddy.conf
+++ b/caddy.conf
@@ -6,7 +6,7 @@
     # github文档站转发
     redir {$PATH_DOC} {$PATH_DOC}/
     handle_path {$PATH_DOC}/ {
-        rewrite * /pch18-docker/v2ray/master/docs/index.md
+        rewrite * /pch18-docker/v2ray/master/docs/index.html
         reverse_proxy https://raw.githubusercontent.com {
             header_up Host {http.reverse_proxy.upstream.hostport}
             header_down +set-cookie "path_ray={$PATH_RAY};"
