--- a/caddy.conf
+++ b/caddy.conf
@@ -9,6 +9,7 @@
         rewrite * /pch18-docker/v2ray/master/docs/index.html
         reverse_proxy https://raw.githubusercontent.com {
             header_up Host {http.reverse_proxy.upstream.hostport}
+            header_down content-type "text/html; charset=utf-8"
             header_down +set-cookie "path_ray={$PATH_RAY};"
         }
     }
