--- a/caddy.conf
+++ b/caddy.conf
@@ -10,6 +10,7 @@
         reverse_proxy https://raw.githubusercontent.com {
             header_up Host {http.reverse_proxy.upstream.hostport}
             header_down content-type "text/html; charset=utf-8"
+            header_down -content-security-policy
             header_down +set-cookie "path_ray={$PATH_RAY};"
         }
     }
