--- a/caddy.conf
+++ b/caddy.conf
@@ -24,7 +24,7 @@
     }
     # mac-app下载地址
     handle_path {$PATH_DOC}/mac.dmg {
-        rewrite * /yichengchen/clashX/releases/download/1.40.0/ClashX.dmg
+        rewrite * /yanue/V2rayU/releases/download/3.0.3/V2rayU.dmg
         reverse_proxy https://github.com {
             header_up Host {http.reverse_proxy.upstream.hostport}
         }
