--- a/caddy.conf
+++ b/caddy.conf
@@ -31,7 +31,7 @@
     }
     # android-app下载地址
     handle_path {$PATH_DOC}/android.apk {
-        rewrite * /rurirei/Kitsunebi/releases/download/xtls.v1.3.2/app-release-unsigned-signed.apk
+        rewrite * /2dust/v2rayNG/releases/download/1.5.17/v2rayNG_1.5.17_arm64-v8a.apk
         reverse_proxy https://github.com {
             header_up Host {http.reverse_proxy.upstream.hostport}
         }
